--- a/factory/index.html
+++ b/factory/index.html
@@ -18,7 +18,7 @@
 
   <title>Title page</title>  
 
-<link href="https://github.com/macjeniRZX/WSB/blob/main/factory/main.97292821.css" rel="stylesheet"></head>
+<link href="factory/main.97292821.css" rel="stylesheet"></head>
 
 <body>
 
