--- a/factory/index.html
+++ b/factory/index.html
@@ -84,7 +84,7 @@
 </div>
 
 <div class="section-container section-half-background-image-container">
-    <div class="image-column" style="background-image: url('G:/My Drive/Studies/WebDev/WSB/factory/assets/images/IMG_1868.jpg')"></div>
+    <div class="image-column" style="background-image: url('factory/assets/images/IMG_1868.jpg')"></div>
     <div class="container">
         <div class="row">
    
