--- a/factory/index.html
+++ b/factory/index.html
@@ -83,7 +83,7 @@
     </div>
 </div>
 
-<div class="section-container">
+<div class="section-container section-half-background-image-container">
     <div class="image-column" style="background-image: url('assets/images/IMG_1868.jpg')"></div>
     <div class="container">
         <div class="row">
