--- a/factory/index.html
+++ b/factory/index.html
@@ -94,7 +94,7 @@
                 <h2>Hi, I am Jenn
                 </h2>
                 <h3>World System Builder</h3>
-                <iframe width="475" height="375" src="https://www.youtube.com/embed/ATa2gITGFbI" title="WSB Campaign Video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="auto" height="auto" src="https://www.youtube.com/embed/ATa2gITGFbI" title="WSB Campaign Video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
             </div>
         </div>
