--- a/factory/index.html
+++ b/factory/index.html
@@ -18,7 +18,14 @@
 
   <title>Title page</title>  
 
-<link href="main.97292821.css" rel="stylesheet"></head>
+<link href="main.97292821.css" rel="stylesheet">
+<link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  >
+
+
+</head>
 
 <body>
 
@@ -59,7 +66,7 @@
         <div class="row">
             <div class="col-xs-12">
                 <img style="width:400px; height:400px" src="assets/images/WSB-30by30-bubbleTitle_wTag.png">
-                <p class="">Financial education isn't an option. It's a necessity.</p>
+                <p class="animate__bounceInLeft">Financial education isn't an option. It's a necessity.</p>
                 <a href="#contact-section-container" class="btn btn-primary btn-lg anchor-link" title="">Get in touch</a>
             </div>
         </div>
