--- a/factory/index.html
+++ b/factory/index.html
@@ -66,7 +66,7 @@
         <div class="row">
             <div class="col-xs-12">
                 <img style="width:400px; height:400px" src="assets/images/WSB-30by30-bubbleTitle_wTag.png">
-                <p class="animate__bounceInLeft">Financial education isn't an option. It's a necessity.</p>
+                <p class="">Financial education isn't an option. It's a necessity.</p>
                 <a href="#contact-section-container" class="btn btn-primary btn-lg anchor-link" title="">Get in touch</a>
             </div>
         </div>
@@ -78,7 +78,7 @@
         <div class="row">
             <div style="display: inline-block;"class="col-xs-12 col-md-12 section-container-spacer">
                 <img  style="width: 351px; height: 404px; float: right; " src="assets/images/WSB-CampaignPin-front.png">
-                <h3 style="width: 65%; text-align: right; line-height: 2;"><h2>Financial education isn't an option. It's a necessity.</h2>
+                <h3 style="width: 65%; text-align: right; line-height: 2;"><h2 class="animate__bounceInLeft">Financial education isn't an option. It's a necessity.</h2>
                     No one should care more about your financial future more than you. Understanding your financial situation and strategy is a priority, especially when faced with the challenges and uncertainty of today's financial climate.
                     </h3>
             </div>
