--- a/factory/index.html
+++ b/factory/index.html
@@ -91,7 +91,7 @@
 </div>
 
 <div class="section-container section-half-background-image-container">
-    <div class="image-column" style="background-image: url('assets/images/IMG_1868.jpg')"></div>
+    <div class="image-column" style="background-image: url('assets/images/IMG_1868.jpg'); max-width:100%; height: auto;"></div>
     <div class="container">
         <div class="row">
    
@@ -99,7 +99,7 @@
             </div>
             <div class="col-md-6 col-md-offset-6 text-column">
                 <h2>Hi, I am Jenn
-                </h2>
+                </h2>100
                 <h3>World System Builder</h3>
                 <iframe width="500" height="400" src="https://www.youtube.com/embed/ATa2gITGFbI" title="WSB Campaign Video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
